# ComfyUI-Svg2Raster

./: README.md  __init__.py  custom_nodes.json  pyproject.toml  requirements.txt  svg2png.ipynb  svg2raster_node.py
.github/workflows/: publish.yaml
examples/: svg_example_workflow.json
